pratical/final/kube-system/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kube-system-network-policy
  namespace: kube-system
spec:
  podSelector:
    matchExpressions:
    - {key: integration-test, operator: In, values: [storage-provisioner]}
    - {key: app, operator: In, values: [minikube-ingress-dns]}
    - {key: control-plane, operator: In, values: [control-plane]}
    - {key: k8s-app, operator: In, values: [calico-kube-controllers,calico-node,kube-dns,kube-proxy,metrics-server]}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {}
  egress:
  - {}
